--- a/index.html
+++ b/index.html
@@ -15,10 +15,91 @@
         <!-- favicon LINK -->
         <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
-    
 
+        <script src="src/index.js"></script>
     </head>
     <body>
         <h1>GitHub Activity Visualization</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-1">
+                    <div class="dropdown">
+                        <button id="btn-drop-year" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        </button>
+                        <ul id="li-year" class="dropdown-menu" aria-labelledby="btnGroupDropYear">
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-11">
+                    <div class="text-center">
+                        <h5>line-chart</h5>
+                        <svg width="400" height="400" id="line-chart">
+                        </svg>
+                        <div class="text-center">
+                            <h5>pie-chart</h5>
+                            <svg width="400" height="400" id="pie-chart">
+                            </svg>
+                        </div>
+                        <div id="repo-stat" class="text-center">
+                            <h5>bar-chart</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-row">
+                <span class="mx-4">X:</span>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="commits" id="x-commits">
+                    <label class="form-check-label" for="x-commits">Commits</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="issues" id="x-issues">
+                    <label class="form-check-label" for="x-issues">Issues</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="prs" id="x-prs">
+                    <label class="form-check-label" for="x-prs">PRs</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="additions" id="x-additions">
+                    <label class="form-check-label" for="x-additions">Additions</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="deletions" id="x-deletions">
+                    <label class="form-check-label" for="x-deletions">Deletions</label>
+                </div>
+            </div>
+            <div class="d-flex flex-row">
+                <span class="mx-4">Y:</span>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="commits" id="y-commits">
+                    <label class="form-check-label" for="y-commits">Commits</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="issues" id="y-issues">
+                    <label class="form-check-label" for="y-issues">Issues</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="prs" id="y-prs">
+                    <label class="form-check-label" for="y-prs">PRs</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="additions" id="y-additions">
+                    <label class="form-check-label" for="y-additions">Additions</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="deletions" id="y-deletions">
+                    <label class="form-check-label" for="y-deletions">Deletions</label>
+                </div>
+            </div>
+            <div class="text-center">
+                <h5>scatterplot</h5>
+                <svg width="400" height="400" id="scatterplot">
+                </svg>
+                <h5>boxplot</h5>
+                <svg width="400" height="400" id="boxplot">
+                </svg>
+            </div>
+        </div>
     </body>
 </html>
