--- a/index.html
+++ b/index.html
@@ -11,84 +11,92 @@
         <!--D3.js-->
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <!--D3.js Component-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+        <script src="https://unpkg.com/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 
+        <!-- Slim Select 2.0 -->
+        <script src="https://unpkg.com/slim-select@latest/dist/slimselect.min.js"></script>
+        <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet">
         <!-- favicon LINK -->
         <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
-
+        <!-- src -->
+        <script src="src/scatterplot.js"></script>
         <script src="src/index.js"></script>
     </head>
     <body>
-        <h1>GitHub Activity Visualization</h1>
         <div class="container">
-            <div class="row">
-                <div class="col-1">
-                    <div class="dropdown">
-                        <button id="btn-drop-year" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        </button>
-                        <ul id="li-year" class="dropdown-menu" aria-labelledby="btnGroupDropYear">
-                        </ul>
-                    </div>
+            <h1>GitHub Activity Visualization</h1>
+            <div class="row d-flex flex-row">
+                <div class="col-2 dropdown">
+                    <button id="btn-drop-year" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    </button>
+                    <ul id="li-year" class="dropdown-menu" aria-labelledby="btnGroupDropYear">
+                    </ul>
                 </div>
-                <div class="col-11">
+                <div class="col-10">
+                    <select id="user-select">
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="text-center">
+                    <h5>line-chart</h5>
+                    <svg width="400" height="400" id="line-chart">
+                    </svg>
                     <div class="text-center">
-                        <h5>line-chart</h5>
-                        <svg width="400" height="400" id="line-chart">
+                        <h5>pie-chart</h5>
+                        <svg width="400" height="400" id="pie-chart">
                         </svg>
-                        <div class="text-center">
-                            <h5>pie-chart</h5>
-                            <svg width="400" height="400" id="pie-chart">
-                            </svg>
-                        </div>
-                        <div id="repo-stat" class="text-center">
-                            <h5>bar-chart</h5>
-                        </div>
+                    </div>
+                    <div id="repo-stat" class="text-center">
+                        <h5>bar-chart</h5>
                     </div>
                 </div>
             </div>
             <div class="d-flex flex-row">
                 <span class="mx-4">X:</span>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="commits" id="x-commits">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="commit_count" id="x-commits" checked>
                     <label class="form-check-label" for="x-commits">Commits</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="issues" id="x-issues">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="issue_count" id="x-issues">
                     <label class="form-check-label" for="x-issues">Issues</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="prs" id="x-prs">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="pr_count" id="x-prs">
                     <label class="form-check-label" for="x-prs">PRs</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="additions" id="x-additions">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="total_additions" id="x-additions">
                     <label class="form-check-label" for="x-additions">Additions</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="deletions" id="x-deletions">
+                    <input class="form-check-input" type="radio" name="x-encoding" value="total_deletions" id="x-deletions">
                     <label class="form-check-label" for="x-deletions">Deletions</label>
                 </div>
             </div>
             <div class="d-flex flex-row">
                 <span class="mx-4">Y:</span>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="commits" id="y-commits">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="commit_count" id="y-commits">
                     <label class="form-check-label" for="y-commits">Commits</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="issues" id="y-issues">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="issue_count" id="y-issues">
                     <label class="form-check-label" for="y-issues">Issues</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="prs" id="y-prs">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="pr_count" id="y-prs">
                     <label class="form-check-label" for="y-prs">PRs</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="additions" id="y-additions">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="total_additions" id="y-additions" checked>
                     <label class="form-check-label" for="y-additions">Additions</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="deletions" id="y-deletions">
+                    <input class="form-check-input" type="radio" name="y-encoding" value="total_deletions" id="y-deletions">
                     <label class="form-check-label" for="y-deletions">Deletions</label>
                 </div>
             </div>
@@ -96,6 +104,14 @@
                 <h5>scatterplot</h5>
                 <svg width="400" height="400" id="scatterplot">
                 </svg>
+                <svg width="400" height="400" id="scatterplot-detail">
+                </svg>
+                <div class="tooltip bs-tooltip-top show" id="sc-tooltip" role="tooltip" style="display:none">
+                    <div class="tooltip-arrow"></div>
+                    <div class="tooltip-inner">
+                        stat
+                    </div>
+                </div>
                 <h5>boxplot</h5>
                 <svg width="400" height="400" id="boxplot">
                 </svg>
