--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
         <!-- src -->
+        <link href="src/style.css" rel="stylesheet">
         <script src="src/scatterplot.js"></script>
         <script src="src/index.js"></script>
     </head>
@@ -30,8 +31,9 @@
             <div class="row d-flex flex-row">
                 <div class="col-2 dropdown">
                     <button id="btn-drop-year" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    </button>
+                    ALL</button>
                     <ul id="li-year" class="dropdown-menu" aria-labelledby="btnGroupDropYear">
+                        <li><button class="dropdown-item year-item" onclick="setYear('ALL');">ALL</button></li>
                     </ul>
                 </div>
                 <div class="col-10">
@@ -39,22 +41,42 @@
                     </select>
                 </div>
             </div>
-            <div class="row">
-                <div class="text-center">
+            <div class="row mb-3">
+                <div class="col-6 text-center">
                     <h5>line-chart</h5>
                     <svg width="400" height="400" id="line-chart">
                     </svg>
-                    <div class="text-center">
-                        <h5>pie-chart</h5>
-                        <svg width="400" height="400" id="pie-chart">
-                        </svg>
+                    <div class="wrapper">
+                        <div id="slider-input" class="d-flex my-3 justify-content-center">
+                            <div class="field">
+                                <span>Start</span>
+                                <input type="date" id="input-start" value="2023-05-01">
+                            </div>
+                            <div class="seperator">-</div>
+                            <div class="field">
+                                <span>End</span>
+                                <input type="date" id="input-end" value="2023-05-20">
+                            </div>
+                        </div>
+                        <div class="slider">
+                            <div class="progress"></div>
+                        </div>
+                        <div class="range-input">
+                            <input type="range" class="range-start" min="0" max="100" value="0">
+                            <input type="range" class="range-end" min="0" max="100" value="100">
+                        </div>
                     </div>
+                </div>
+                <div class="col-6 text-center">
+                    <h5>pie-chart</h5>
+                    <svg width="400" height="400" id="pie-chart">
+                    </svg>
                     <div id="repo-stat" class="text-center">
                         <h5>bar-chart</h5>
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-row">
+            <div class="d-flex flex-row mb-3">
                 <span class="mx-4">X:</span>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="x-encoding" value="commit_count" id="x-commits" checked>
