--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <!--D3.js Component-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/d3-format@3"></script>
         <script src="https://unpkg.com/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 
         <!-- Slim Select 2.0 -->
@@ -22,6 +23,7 @@
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
         <!-- src -->
         <link href="src/style.css" rel="stylesheet">
+        <script src="src/linechart.js"></script>
         <script src="src/scatterplot.js"></script>
         <script src="src/index.js"></script>
     </head>
