feat: 기여내역 line chart 추가

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <!--D3.js-->
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <!--D3.js Component-->
+        <!--D3.js legend -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+        <!--D3.js format -->
         <script src="https://cdn.jsdelivr.net/npm/d3-format@3"></script>
         <script src="https://unpkg.com/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
 
