--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
         <!-- src -->
         <link href="src/style.css" rel="stylesheet">
+        <script src="src/piechart.js"></script>
         <script src="src/linechart.js"></script>
         <script src="src/scatterplot.js"></script>
         <script src="src/index.js"></script>
