--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <!--D3.js-->
@@ -25,6 +26,8 @@
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
         <!-- src -->
         <link href="src/style.css" rel="stylesheet">
+        <script src="src/barchart.js"></script>
+        <script src="src/repocard.js"></script>
         <script src="src/piechart.js"></script>
         <script src="src/linechart.js"></script>
         <script src="src/scatterplot.js"></script>
@@ -84,6 +87,26 @@
                     </div>
                     <div id="repo-stat" class="text-center">
                         <h5>bar-chart</h5>
+                        <div id="repo-info-1" class="d-flex flex-row">
+                            <div class="w-50"></div>
+                            <svg></svg>
+                        </div>
+                        <div id="repo-info-2" class="d-flex flex-row">
+                            <div class="w-50"></div>
+                            <svg></svg>
+                        </div>
+                        <div id="repo-info-3" class="d-flex flex-row">
+                            <div class="w-50"></div>
+                            <svg></svg>
+                        </div>
+                        <div id="repo-info-4" class="d-flex flex-row">
+                            <div class="w-50"></div>
+                            <svg></svg>
+                        </div>
+                        <div id="repo-info-5" class="d-flex flex-row">
+                            <div class="w-50"></div>
+                            <svg></svg>
+                        </div>
                     </div>
                 </div>
             </div>
