--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h5>line-chart</h5>
                     <svg width="400" height="400" id="line-chart">
                     </svg>
-                    <div class="wrapper">
+                    <div class="wrapper mb-4">
                         <div class="slider">
                             <div class="progress"></div>
                         </div>
@@ -71,6 +71,65 @@
                             <div class="field">
                                 <span>End</span>
                                 <input type="date" id="input-end" value="2023-05-20">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row mt-5 mb-2">
+                        <span class="mx-4">X:</span>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="x-encoding" value="commit_count" id="x-commits" checked>
+                            <label class="form-check-label" for="x-commits">Commits</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="x-encoding" value="issue_count" id="x-issues">
+                            <label class="form-check-label" for="x-issues">Issues</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="x-encoding" value="pr_count" id="x-prs">
+                            <label class="form-check-label" for="x-prs">PRs</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="x-encoding" value="total_additions" id="x-additions">
+                            <label class="form-check-label" for="x-additions">Additions</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="x-encoding" value="total_deletions" id="x-deletions">
+                            <label class="form-check-label" for="x-deletions">Deletions</label>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <span class="mx-4">Y:</span>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="y-encoding" value="commit_count" id="y-commits">
+                            <label class="form-check-label" for="y-commits">Commits</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="y-encoding" value="issue_count" id="y-issues">
+                            <label class="form-check-label" for="y-issues">Issues</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="y-encoding" value="pr_count" id="y-prs">
+                            <label class="form-check-label" for="y-prs">PRs</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="y-encoding" value="total_additions" id="y-additions" checked>
+                            <label class="form-check-label" for="y-additions">Additions</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="y-encoding" value="total_deletions" id="y-deletions">
+                            <label class="form-check-label" for="y-deletions">Deletions</label>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <h5>scatterplot</h5>
+                        <svg width="400" height="400" id="scatterplot">
+                        </svg>
+                        <svg width="400" height="400" id="scatterplot-detail">
+                        </svg>
+                        <div class="tooltip bs-tooltip-top show" id="sc-tooltip" role="tooltip" style="display:none">
+                            <div class="tooltip-arrow"></div>
+                            <div class="tooltip-inner">
+                                stat
                             </div>
                         </div>
                     </div>
@@ -110,64 +169,8 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-row mb-3">
-                <span class="mx-4">X:</span>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="commit_count" id="x-commits" checked>
-                    <label class="form-check-label" for="x-commits">Commits</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="issue_count" id="x-issues">
-                    <label class="form-check-label" for="x-issues">Issues</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="pr_count" id="x-prs">
-                    <label class="form-check-label" for="x-prs">PRs</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="total_additions" id="x-additions">
-                    <label class="form-check-label" for="x-additions">Additions</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="x-encoding" value="total_deletions" id="x-deletions">
-                    <label class="form-check-label" for="x-deletions">Deletions</label>
-                </div>
-            </div>
-            <div class="d-flex flex-row">
-                <span class="mx-4">Y:</span>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="commit_count" id="y-commits">
-                    <label class="form-check-label" for="y-commits">Commits</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="issue_count" id="y-issues">
-                    <label class="form-check-label" for="y-issues">Issues</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="pr_count" id="y-prs">
-                    <label class="form-check-label" for="y-prs">PRs</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="total_additions" id="y-additions" checked>
-                    <label class="form-check-label" for="y-additions">Additions</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="y-encoding" value="total_deletions" id="y-deletions">
-                    <label class="form-check-label" for="y-deletions">Deletions</label>
-                </div>
-            </div>
+            
             <div class="text-center">
-                <h5>scatterplot</h5>
-                <svg width="400" height="400" id="scatterplot">
-                </svg>
-                <svg width="400" height="400" id="scatterplot-detail">
-                </svg>
-                <div class="tooltip bs-tooltip-top show" id="sc-tooltip" role="tooltip" style="display:none">
-                    <div class="tooltip-arrow"></div>
-                    <div class="tooltip-inner">
-                        stat
-                    </div>
-                </div>
                 <h5>boxplot</h5>
                 <svg width="400" height="400" id="boxplot">
                 </svg>
