--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="icon" href="public/favicon.ico" type="image/x-icon">
         <!-- src -->
         <link href="src/style.css" rel="stylesheet">
+        <script src="src/boxplot.js"></script>
         <script src="src/barchart.js"></script>
         <script src="src/repocard.js"></script>
         <script src="src/piechart.js"></script>
@@ -51,7 +52,6 @@
             </div>
             <div class="row mb-3">
                 <div class="col-6 text-center">
-                    <h5>line-chart</h5>
                     <svg width="400" height="400" id="line-chart">
                     </svg>
                     <div class="wrapper mb-4">
@@ -121,7 +121,6 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <h5>scatterplot</h5>
                         <svg width="400" height="400" id="scatterplot">
                         </svg>
                         <svg width="400" height="400" id="scatterplot-detail">
@@ -135,7 +134,6 @@
                     </div>
                 </div>
                 <div class="col-6 text-center">
-                    <h5>pie-chart</h5>
                     <svg width="400" height="400" id="pie-chart">
                     </svg>
                     <div class="tooltip bs-tooltip-top show" id="pie-tooltip" role="tooltip" style="display:none">
@@ -145,34 +143,40 @@
                         </div>
                     </div>
                     <div id="repo-stat" class="text-center">
-                        <h5>bar-chart</h5>
                         <div id="repo-info-1" class="d-flex flex-row">
-                            <div class="w-50"></div>
+                            <div class="me-2"></div>
                             <svg></svg>
                         </div>
                         <div id="repo-info-2" class="d-flex flex-row">
-                            <div class="w-50"></div>
+                            <div class="me-2"></div>
                             <svg></svg>
                         </div>
                         <div id="repo-info-3" class="d-flex flex-row">
-                            <div class="w-50"></div>
+                            <div class="me-2"></div>
                             <svg></svg>
                         </div>
                         <div id="repo-info-4" class="d-flex flex-row">
-                            <div class="w-50"></div>
+                            <div class="me-2"></div>
                             <svg></svg>
                         </div>
                         <div id="repo-info-5" class="d-flex flex-row">
-                            <div class="w-50"></div>
+                            <div class="me-2"></div>
                             <svg></svg>
                         </div>
                     </div>
                 </div>
             </div>
             
-            <div class="text-center">
-                <h5>boxplot</h5>
-                <svg width="400" height="400" id="boxplot">
+            <div class="d-flex flex-column text-center">
+                <svg width="400" height="150" id="boxplot-commit_count">
+                </svg>
+                <svg width="400" height="150" id="boxplot-pr_count">
+                </svg>
+                <svg width="400" height="150" id="boxplot-issue_count">
+                </svg>
+                <svg width="400" height="150" id="boxplot-total_additions">
+                </svg>
+                <svg width="400" height="150" id="boxplot-total_deletions">
                 </svg>
             </div>
         </div>
